--- a/app/app.scss
+++ b/app/app.scss
@@ -44,6 +44,19 @@ Page.success .qr {
   color: #f68f4f;
 }
 
+Page.success .visit-status-green {
+  font-size: 12px;
+  font-weight: bold;
+  color: #2abfc4;
+}
+
+Page.success .visit-status-red {
+  font-size: 12px;
+  font-weight: bold;
+  color: #e6494b;
+}
+
+
 Page.success Image {
   padding: 5%;
   margin-top: 2%;
