--- a/app/app.scss
+++ b/app/app.scss
@@ -150,6 +150,17 @@ Page#blocked {
   background: #f68f4f;
 }
 
+.round-btn-success {
+  border-radius:30;
+  margin-left: 10%;
+  margin-right: 10%;
+  z-index: 1;
+  color: white;
+  font-size: 20rem;
+  font-weight: bold;
+  background: #6edb1b;
+}
+
 .round-btn-no-bg {
   border-radius:30;
   margin-left: 10%;
@@ -212,6 +223,10 @@ Label.hdf-alert {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 2%;
+}
+
+Label.ml-5 {
+  margin-left: 10%;
 }
 
 MDCardView.dashboard-item {
