tours info on scan

--- a/app/app.scss
+++ b/app/app.scss
@@ -317,3 +317,11 @@ ImageZoom {
   border: solid red 2px;
   height: 100%;
 }
+
+.center-text {
+  text-align: center;
+}
+
+.max-height {
+  height: 100%;
+}
